# simple-proxy

./: Cargo.toml  Makefile  README.md  _code.md  _typos.toml  deny.toml
.cursor/rules/: extism.mdc
docs/: proxy-http.md
examples/: README.md  server.rs  test.rest
examples/plugins/: README.md
examples/plugins/example-request-modifier/: Cargo.toml
examples/plugins/example-request-modifier/src/: lib.rs
fixtures/: app.yml  example_request_modifier.wasm  sample.yaml  sample.yml
fixtures/certs/: api.acme.com.crt  api.acme.com.key  ca.crt  ca.key  wildcard.acme.com.crt  wildcard.acme.com.key
fixtures/plugins/: example_request_modifier.wasm
memory_bank/: activeContext.md  extism.md  pingora.md  pluginSystem.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
specs/: 001-example-server.md  002-proxy-config.md  003-tls-cert.md  004-update-config.md  instructions.md
src/: lib.rs  main.rs  utils.rs
src/conf/: mod.rs  raw.rs  resolved.rs
src/plugins/: config.rs  error.rs  interface.rs  manager.rs  mod.rs  registry.rs  types.rs
src/proxy/: health.rs  mod.rs  route.rs  simple_proxy.rs
