[package]
name = "simple-proxy"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/tyrchen/simple-proxy"
homepage = "https://github.com/tyrchen/simple-proxy"
description = """
A simple proxy server in Rust.
"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
anyhow = "1.0.97"
arc-swap = "1.7.1"
async-trait = "0.1.88"
clap = { version = "4.5.36", features = ["derive"] }
http = "1.3.1"
pingora = { version = "0.4.0", features = ["lb", "rustls"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
argon2 = "0.5.3"
axum = { version = "0.8", features = ["http2"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
serde_json = "1.0"
tempfile = "3"
tower-http = { version = "0.6.2", features = ["trace"] }

[patch.crates-io]
sfv = { git = "https://github.com/undef1nd/sfv.git", tag = "v0.9.4" }
