[package]
name = "simple-proxy"
version = "0.2.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/simple-proxy"
repository = "https://github.com/tyrchen/simple-proxy"
homepage = "https://github.com/tyrchen/simple-proxy"
description = """
A lightweight, configurable HTTP reverse proxy built with Pingora, with support for
load balancing, health checks, and WebAssembly plugins via Extism.
"""
readme = "README.md"
categories = ["network-programming", "wasm"]
keywords = ["proxy", "reverse-proxy", "http", "wasm", "load-balancing"]

[dependencies]
anyhow = "1.0.97"
arc-swap = "1.7.1"
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
dashmap = "6.1"
extism = "1.10.0"
http = "1.3.1"
papaya = { version = "0.2.1", features = ["serde"] }
pingora = { version = "0.4.0", features = ["lb", "rustls", "cache"] }
rand = "0.8"
rustls = "0.23.26"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.16"
serde_json = "1.0"
serde_yaml = "0.9.34"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
argon2 = "0.5.3"
axum = { version = "0.8", features = ["http2"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tempfile = "3"
tower-http = { version = "0.6.2", features = ["trace"] }

[patch.crates-io]
sfv = { git = "https://github.com/undef1nd/sfv.git", tag = "v0.9.4" }
